# ATLAS

./: .env  .env.example  .gitattributes  .gitignore  BENCHMARKING_GUIDE.md  LIVEWIRE_TESTING_QUICK_REFERENCE.md  MINIO_CACHE_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README-v1.md  README.md  Run-ClusterBenchmark.ps1  Skyhigh_Security_Placement_Guide.docx  Sync-AtlasData.ps1  bench_hydration.py  build.sh  clean.sh  cluster.bat  compose-out.yaml  docker-compose.override.yml  docker-compose.yml  failover_test.bat  fix_pg.sh  generate_test_stream_data.py  kafka_sample.json  load_test.ps1  pyrightconfig.json  requirements.txt  reset-all.bat  run_spark.bat  send_requests.py  single.bat  stop.bat  stream_data.bat  test-integration.sh  test_livewire_atlas.sh  trigger1.ps1  watchdog.bat
ML-Model/: Dockerfile  README.md  data_generator.py  entrypoint.sh  evaluate_model.py  execution.txt  live_data_gen.py  predict.py  requirements.txt  train_model.py
analytics-py/: README.md  example_consumer.py  setup.py
broker/: CMakeLists.txt  README.md
broker/include/: logger.h  tcp_server.h  thread_pool.h
broker/src/: logger.cpp  main.cpp  tcp_server.cpp  thread_pool.cpp
delta_lake/: .env  .gitignore  BUGS.md  Dockerfile  LIVEWIRE_MODE.md  README.md  bugs-to-be-fixed.md  delta_core.py  delta_merge_pipeline.py  docker-compose.yml  generate_data.py  livewire_schema_validator.py  livewire_streaming.py  run_benchmark.py  run_livewire.py  streaming_data_producer.py  streaming_merge_pipeline.py  test_livewire_comprehensive.py
deploy/: Dockerfile  README.md  docker-compose.yml
(+34523 files in other folders)
